@@ -122,6 +122,26 @@ name|Iterator
 import|;
 end_import
 
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|ArrayList
+import|;
+end_import
+
 begin_comment
 comment|/**  * Basic tool to check the health of an index and write a  * new segments file that removes reference to problematic  * segments.  There are many more checks that this tool  * could do but does not yet, eg: reconstructing a segments  * file by looking for all loadable segments (if no segments  * file is found), removing specifically specified segments,  * listing files that exist but are not referenced, etc.  */
 end_comment
@@ -215,6 +235,36 @@ name|dir
 parameter_list|,
 name|boolean
 name|doFix
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+return|return
+name|check
+argument_list|(
+name|dir
+argument_list|,
+name|doFix
+argument_list|,
+literal|null
+argument_list|)
+return|;
+block|}
+comment|/** Returns true if index is clean, else false.*/
+DECL|method|check
+specifier|public
+specifier|static
+name|boolean
+name|check
+parameter_list|(
+name|Directory
+name|dir
+parameter_list|,
+name|boolean
+name|doFix
+parameter_list|,
+name|List
+name|onlySegments
 parameter_list|)
 throws|throws
 name|IOException
@@ -491,6 +541,57 @@ argument_list|)
 expr_stmt|;
 if|if
 condition|(
+name|onlySegments
+operator|!=
+literal|null
+condition|)
+block|{
+name|out
+operator|.
+name|print
+argument_list|(
+literal|"\nChecking only these segments:"
+argument_list|)
+expr_stmt|;
+name|Iterator
+name|it
+init|=
+name|onlySegments
+operator|.
+name|iterator
+argument_list|()
+decl_stmt|;
+while|while
+condition|(
+name|it
+operator|.
+name|hasNext
+argument_list|()
+condition|)
+block|{
+name|out
+operator|.
+name|print
+argument_list|(
+literal|" "
+operator|+
+name|it
+operator|.
+name|next
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+name|out
+operator|.
+name|println
+argument_list|(
+literal|":"
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
 name|skip
 condition|)
 block|{
@@ -562,6 +663,23 @@ argument_list|(
 name|i
 argument_list|)
 decl_stmt|;
+if|if
+condition|(
+name|onlySegments
+operator|!=
+literal|null
+operator|&&
+operator|!
+name|onlySegments
+operator|.
+name|contains
+argument_list|(
+name|info
+operator|.
+name|name
+argument_list|)
+condition|)
+continue|continue;
 name|out
 operator|.
 name|println
@@ -1824,22 +1942,32 @@ name|doFix
 init|=
 literal|false
 decl_stmt|;
-for|for
-control|(
+name|List
+name|onlySegments
+init|=
+operator|new
+name|ArrayList
+argument_list|()
+decl_stmt|;
+name|String
+name|indexPath
+init|=
+literal|null
+decl_stmt|;
 name|int
 name|i
 init|=
 literal|0
-init|;
+decl_stmt|;
+while|while
+condition|(
 name|i
 operator|<
 name|args
 operator|.
 name|length
-condition|;
-name|i
-operator|++
-control|)
+condition|)
+block|{
 if|if
 condition|(
 name|args
@@ -1857,32 +1985,139 @@ name|doFix
 operator|=
 literal|true
 expr_stmt|;
-break|break;
+name|i
+operator|++
+expr_stmt|;
 block|}
+elseif|else
 if|if
 condition|(
 name|args
+index|[
+name|i
+index|]
+operator|.
+name|equals
+argument_list|(
+literal|"-segment"
+argument_list|)
+condition|)
+block|{
+if|if
+condition|(
+name|i
+operator|==
+name|args
 operator|.
 name|length
-operator|!=
-operator|(
-name|doFix
-condition|?
-literal|2
-else|:
+operator|-
 literal|1
-operator|)
 condition|)
 block|{
 name|out
 operator|.
 name|println
 argument_list|(
-literal|"\nUsage: java org.apache.lucene.index.CheckIndex pathToIndex [-fix]\n"
+literal|"ERROR: missing name for -segment option"
+argument_list|)
+expr_stmt|;
+name|System
+operator|.
+name|exit
+argument_list|(
+literal|1
+argument_list|)
+expr_stmt|;
+block|}
+name|onlySegments
+operator|.
+name|add
+argument_list|(
+name|args
+index|[
+name|i
+operator|+
+literal|1
+index|]
+argument_list|)
+expr_stmt|;
+name|i
+operator|+=
+literal|2
+expr_stmt|;
+block|}
+else|else
+block|{
+if|if
+condition|(
+name|indexPath
+operator|!=
+literal|null
+condition|)
+block|{
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"ERROR: unexpected extra argument '"
+operator|+
+name|args
+index|[
+name|i
+index|]
+operator|+
+literal|"'"
+argument_list|)
+expr_stmt|;
+name|System
+operator|.
+name|exit
+argument_list|(
+literal|1
+argument_list|)
+expr_stmt|;
+block|}
+name|indexPath
+operator|=
+name|args
+index|[
+name|i
+index|]
+expr_stmt|;
+name|i
+operator|++
+expr_stmt|;
+block|}
+block|}
+if|if
+condition|(
+name|indexPath
+operator|==
+literal|null
+condition|)
+block|{
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"\nERROR: index path not specified"
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"\nUsage: java org.apache.lucene.index.CheckIndex pathToIndex [-fix] [-segment X] [-segment Y]\n"
 operator|+
 literal|"\n"
 operator|+
 literal|"  -fix: actually write a new segments_N file, removing any problematic segments\n"
+operator|+
+literal|"  -segment X: only check the specified segments.  This can be specified multiple\n"
+operator|+
+literal|"              times, to check more than one segment, eg '-segment _2 -segment _a'.\n"
+operator|+
+literal|"              You can't use this with the -fix option\n"
 operator|+
 literal|"\n"
 operator|+
@@ -1921,22 +2156,47 @@ literal|1
 argument_list|)
 expr_stmt|;
 block|}
-specifier|final
-name|String
-name|dirName
-init|=
-name|args
-index|[
+if|if
+condition|(
+name|onlySegments
+operator|.
+name|size
+argument_list|()
+operator|==
 literal|0
-index|]
-decl_stmt|;
+condition|)
+name|onlySegments
+operator|=
+literal|null
+expr_stmt|;
+elseif|else
+if|if
+condition|(
+name|doFix
+condition|)
+block|{
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"ERROR: cannot specify both -fix and -segment"
+argument_list|)
+expr_stmt|;
+name|System
+operator|.
+name|exit
+argument_list|(
+literal|1
+argument_list|)
+expr_stmt|;
+block|}
 name|out
 operator|.
 name|println
 argument_list|(
 literal|"\nOpening index @ "
 operator|+
-name|dirName
+name|indexPath
 operator|+
 literal|"\n"
 argument_list|)
@@ -1954,7 +2214,7 @@ name|FSDirectory
 operator|.
 name|getDirectory
 argument_list|(
-name|dirName
+name|indexPath
 argument_list|)
 expr_stmt|;
 block|}
@@ -1970,7 +2230,7 @@ name|println
 argument_list|(
 literal|"ERROR: could not open directory \""
 operator|+
-name|dirName
+name|indexPath
 operator|+
 literal|"\"; exiting"
 argument_list|)
@@ -1998,6 +2258,8 @@ argument_list|(
 name|dir
 argument_list|,
 name|doFix
+argument_list|,
+name|onlySegments
 argument_list|)
 decl_stmt|;
 specifier|final
